@@ -39,11 +39,20 @@
 (defvar shimbun-mew-url "http://www.mew.org/ml/")
 
 (defconst shimbun-mew-group-url-alist
-  '(("mew-dist" . "mew-dist-2.0")
+  '(("mew-dist" . "mew-dist-3.1")
+    ("mew-dist-3.1" . "mew-dist-3.1")
+    ("mew-dist-2.0" . "mew-dist-2.0")
+    ("mew-dist-1.94" . "mew-dist-1.94")
     ("mew-dist-old" . "mew-dist-1.94")
-    ("mew-win32" . "mew-win32-2.0")
+    ("mew-win32" . "mew-win32-3.1")
+    ("mew-win32-3.1" . "mew-win32-3.1")
+    ("mew-win32-2.0" . "mew-win32-2.0")
+    ("mew-win32-0" . "mew-win32-0")
     ("mew-win32-old" . "mew-win32-0")
-    ("mew-int" . "mew-int-2.0")
+    ("mew-int" . "mew-int-3.1")
+    ("mew-int-3.1" . "mew-int-3.1")
+    ("mew-int-2.0" . "mew-int-2.0")
+    ("mew-int-0" . "mew-int-0")
     ("mew-int-old" . "mew-int-0")
     ("mgp-users" . "mgp-users")
     ("mgp-users-jp" . "mgp-users-jp")))
